AvaTax4ServiceMax/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ExemptEntityType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Entity/Use Code (AKA Customer Usage Type) which will be sent to Avalara on tax calc to define special taxation (e.g. exemption) for this Customer by default.  Optional, may be overridden at the WorkOrder and/or Service Quote Level</inlineHelpText>
        <label>Ëntity/Use Code</label>
        <referenceTo>Entity_Use_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts (Business Hours)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>